--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>서울 휴지통 · (서울 한정) 검색/임의위치/A↔B 경로 (카카오맵)</title>
+  <title>서울 휴지통 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
@@ -11,8 +11,6 @@
   <div class="panel">
     <h1>서울 휴지통 · (서울 한정) 검색/임의위치/A↔B 경로</h1>
     <div class="small">
-      CSV/GeoJSON을 자동으로 읽습니다. 기본 파일명: <code>주소 수정.csv</code>, <code>HangJeongDong_Seoul.geojson</code><br>
-      다른 파일은 <code>?csv=파일.csv&geo=파일.geojson</code>를 사용하세요.
       <div style="margin-top:6px;"><span class="pill seoul">구 선택은 <b>서울특별시</b>만 표시</span></div>
     </div>
     <div class="row">
@@ -56,3 +54,4 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
