--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <button id="togglePanelBtn" class="toggle-btn">UI 숨기기</button>
 
   <!-- 외부 라이브러리 -->
-  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=345d6f5567b13749e594420fcceee862&libraries=clusterer,drawing"></script>
+  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=345d6f5567b13749e594420fcceee862&libraries=clusterer,geometry,drawing"></script>
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js"></script>
 
@@ -54,4 +54,5 @@
   <script src="./app.js"></script>
 </body>
 </html>
+
 
