--- a/index.html
+++ b/index.html
@@ -46,19 +46,28 @@
   <button id="togglePanelBtn" class="toggle-btn">UI 숨기기</button>
 
   <!-- 외부 라이브러리 -->
-  <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=345d6f5567b13749e594420fcceee862&autoload=false&libraries=clusterer,geometry"></script>
-  <script src="./app.js"></script>
-    <script>
+  
+  <!-- ✅ 반드시 https 명시 + autoload=false -->
+<script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=345d6f5567b13749e594420fcceee862&autoload=false&libraries=clusterer,geometry"></script>
+
+<!-- ✅ 외부 라이브러리 (있으면 그대로) -->
+<script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js"></script>
+
+<!-- ✅ 앱 스크립트: 프로젝트 루트에 app.js가 실제로 존재해야 함 -->
+<script src="./app.js"></script>
+
+<!-- ✅ 카카오맵 로드 트리거: app.js 안에 window.initMap가 정의돼 있어야 함 -->
+<script>
   kakao.maps.load(() => {
     if (window.initMap) window.initMap();
   });
-  <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js"></script>
+</script>
   
-
 </script>
 </body>
 </html>
+
 
 
 
